[gd_scene load_steps=21 format=2]

[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Idle/1.png" type="Texture" id=1]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/1.png" type="Texture" id=2]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/2.png" type="Texture" id=3]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/3.png" type="Texture" id=4]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/4.png" type="Texture" id=5]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/5.png" type="Texture" id=6]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/6.png" type="Texture" id=7]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/4.png" type="Texture" id=8]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/3.png" type="Texture" id=9]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/1.png" type="Texture" id=10]
[ext_resource path="res://Treasure Hunters/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Hit/2.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Seashell.gd" type="Script" id=12]
[ext_resource path="res://Sounds/enemy_hit.wav" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 8.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 0, 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 17.9996
height = 254.001

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 13, 2 )

[node name="Seashell" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 12 )

[node name="texture" type="Sprite" parent="."]
position = Vector2( 0, -19 )
texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 1, -8.5 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/hit = SubResource( 5 )
anims/idle = SubResource( 4 )

[node name="spawnShoot" type="Position2D" parent="."]
position = Vector2( -21, -10 )

[node name="playerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="collision" type="CollisionShape2D" parent="playerDetector"]
position = Vector2( 0, -8 )
rotation = 1.5708
z_index = -1
shape = SubResource( 8 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 64

[node name="collision" type="CollisionShape2D" parent="hitbox"]
modulate = Color( 0.447059, 0.85098, 0.0941176, 1 )
position = Vector2( 0, -19 )
shape = SubResource( 7 )

[node name="hitFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -20.0

[connection signal="body_entered" from="playerDetector" to="." method="_on_playerDetector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_playerDetector_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
